# ros_airDocking_two_step

./: .gitignore  README.md
real_ros/docking1/src/: frequance.sh
real_ros/docking1/src/Motive_tool/: Motiv2UAV1.py  Motiv2UAV2.py  Motive2UAV2_display.py  UAV2_display.py
real_ros/docking1/src/get_master_make_m/src/: get_master_make_m_node.cpp
real_ros/docking1/src/offboard/: CMakeLists.txt  README.md  package.xml
real_ros/docking1/src/offboard/include/offboard/: include.h
real_ros/docking1/src/offboard/launch/: offboard.launch
real_ros/docking1/src/offboard/setting/: parameter.yaml
real_ros/docking1/src/offboard/src/: offboard_node.cpp
real_ros/docking1/src/transmitacr/: CMakeLists.txt
real_ros/docking1/src/transmitacr/launch/: UAV1.bash  UAV1_RTK.bash  UAV1mavros.launch  frequence1.sh  sample.launch  transmitacr.launch
real_ros/docking1/src/transmitacr/src/: transmitacr_node.cpp
real_ros/docking1/src/velocity_control/: CMakeLists.txt
real_ros/docking1/src/velocity_control/scripts/: control_velocity.py  control_velocity_pid.py  control_velocity_pid_vrpn.py  control_velocity_vrpn.py  model_predict.py  model_predict_pid.py  params.py
real_ros/docking1/src/velocity_control/src/: control_velocity.cpp  control_velocity_sb3.cpp  control_velocity_sou.cpp
real_ros/docking2/airdocking/src/: frequence.sh
real_ros/docking2/airdocking/src/Motive_tool/: MotiveUAV_single.py
real_ros/docking2/airdocking/src/transmitacr/: package.xml
real_ros/docking2/airdocking/src/velocity_control/: CMakeLists.txt  package.xml
(+155 files in other folders)
